src/objects/Lead_Scoring_Bucket__c.object
<CustomObject>
    <fields>
        <fullName>Bucket_Percentage__c</fullName>
        <label>Bucket Percentage</label>
        <precision>3</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Delete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Delete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Total_Bucket_Score__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Total Bucket Score</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Lead Scoring Bucket</label>
    <listViews>
        <fullName>All</fullName>
        <columns>OBJECT_ID</columns>
        <columns>NAME</columns>
        <columns>Bucket_Percentage__c</columns>
        <columns>Delete__c</columns>
        <columns>Total_Bucket_Score__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Lead Scoring Bucket Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Lead Scoring Buckets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Bucket_Name_cannot_be_empty</fullName>
        <active>true</active>
        <errorConditionFormula>ISBLANK( Name )</errorConditionFormula>
        <errorDisplayField>Name</errorDisplayField>
        <errorMessage>Bucket name cannot be empty</errorMessage>
    </validationRules>
</CustomObject>